# kubectl-ditto

./: .krew.yaml  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml  release.yaml
deploy/krew/: plugin.yaml  update-sha256.sh
src/: cli.rs  discovery.rs  generate.rs  interactive.rs  main.rs  schema.rs
